# Transfer-Learning-on-Microbiome-Data

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_transfer_learning_exploration.ipynb
outputs/models/: autoencoder.joblib
src/: main.py
src/data/: real_data.py  simulator.py
src/models/: autoencoder.py  classifier.py  encoder.py
src/utils/: config.py  logger.py
src/visualization/: plots.py
tests/: test_autoencoder.py  test_classifier_plots.py  test_simulator.py
