[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "day21-transfer-learning-microbiome"
version = "1.0.0"
description = "Transfer learning on microbiome data: pretrained autoencoder → IBD classifier"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0", "pandas>=2.0.0", "scipy>=1.11.0",
    "scikit-learn>=1.3.0", "matplotlib>=3.7.0",
    "seaborn>=0.13.0", "joblib>=1.3.0", "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
